# standardization

./: bad.py  pyproject.toml  valid_options.py
tests/: test_standardization.py
