[tool.poetry]
name = "standardization"
version = "0.1.0"
description = ""
authors = ["Zachary Blackwood <zblackwo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^3.8.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
